--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -1,3 +1,3 @@
 FROM docker://registry.fedoraproject.org/fedora:40
-RUN dnf install -y openssh-clients vagrant vagrant-libvirt
+RUN dnf install -y openssh-clients vagrant vagrant-libvirt vagrant-sshfs podman podman-compose podman-docker
 CMD [ "/bin/bash" ]
